k8s/deployment.yaml
# k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demystops
  namespace: demystops
  labels:
    app: demystops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demystops
  template:
    metadata:
      labels:
        app: demystops
    spec:
      containers:
      - name: demystops
        image: sasow/demystops:1.0.11
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
