k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demystops-service
  namespace: demystops
spec:
  selector:
    app: demystops
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30081
  type: NodePort
